# kodelet

./: .air.toml  .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  AGENT.md  AGENTS.md  Dockerfile  Dockerfile.cross-build  KODELET.md  Makefile  NVIM_INTEGRATION.md  OPENAI_RESPONSE_API.md  PLAN.md  README.md  RELEASE.md  REQ.md  REQUIREMENTS.md  VERSION.txt  agent_context_design.md  config.sample.yaml  go.mod  go.sum  install.sh  kodelet-config.sample.yaml  main.go  mise.toml  prd.json  progress.txt
adrs/: 001-bubble-tea-chat-ui.md  002-commit-command.md  003-multi-llm-provider-support.md  003-watch-command.md  004-unify-llm-client-interfaces.md  005-llm-usage-tracking.md  006-conversation-persistence.md  007-otel-tracing-implementation.md  008-refactor-sysprompt-package.md  009-web-fetch-tool.md  010-openai-llm-integration.md  010-tool-result-interface-refactoring.md  011-image-input-support.md  012-background-kodelet.md  013-kodelet-cli-background-support.md  014-openai-compatible-api-support.md  014-web-ui-conversation-viewer.md  015-structured-tool-result-storage.md  016-bbolt-conversation-storage.md  016-openai-compatible-api-support.md  017-named-subagents.md  017-profile-system.md  017-subagent-model-provider-flexibility.md  018-custom-tools.md  018-google-genai-integration.md  019-neovim-ide-integration.md  019-openai-response-api-integration.md  020-agentic-skills.md  021-agent-lifecycle-hooks.md  022-agent-client-protocol.md  022-configurable-system-prompts.md  023-unified-thread-base-package.md  024-openai-responses-api.md  025-enhanced-hook-system.md  025-recipe-hooks-for-context-compaction.md  026-headless-partial-message-streaming.md  027-python-sdk.md  027-subagent-shell-out-simplification.md  028-unified-plugin-system.md  029-plugin-hooks.md
agents/: documentation_agent.md  kodelet_dev_agent.md  pr_review_agent.md  refactor_agent.md
desktop/: .gitignore  README.md  electron-builder.config.js  package-lock.json  package.json  tsconfig.json
docs/: ACP.md  ACP_INTEGRATION_PLAN.md  CONVERSATIONS.md  DEVELOPMENT.md  FRAGMENTS.md  GITHUB_ACTIONS.md  HOOKS.md  IDE_INTEGRATION.md  MANUAL.md  RALPH.md  SKILLS.md  extension-design.md  mcp-code-execution-design.md  mcp.md  tools.md  (+1 more)
examples/chatbot/: .gitignore  CHATBOT_UI.md  Dockerfile  README.md  app.py  pyproject.toml
examples/chatbot/src/: __init__.py  conversation_manager.py  kodelet_api.py  kodelet_client.py  ui_components.py
examples/chatbot/tests/: test_basic.py
sdk/python/: .gitignore  AGENTS.md  README.md  pyproject.toml
sdk/python/examples/: calculator_server.py  hooks_example.py  mcp_tools.py  simple_query.py
sdk/python/src/kodelet/: __init__.py  client.py  config.py  conversation.py  events.py  exceptions.py  hooks.py  mcp.py  tool_results.py
sdk/python/tests/: __init__.py  test_client.py  test_conversation.py  test_events.py  test_hooks.py  test_integration.py  test_mcp.py  test_tool_results.py
(+976 files in other folders)
